<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Player</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_settings">Settings</string>

    <!-- Playlists -->
    <string name="create_playlist">Create Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="delete_playlist_confirmation">Are you sure you want to delete "%1$s"?</string>
    <string name="no_playlists">No playlists yet</string>

    <!-- Actions -->
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>

    <!-- Content Descriptions -->
    <string name="album_art">Album Art</string>
    <string name="more_options">More Options</string>
    
    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_playlists">Playlists</string>
    <string name="nav_settings">Settings</string>

    <!-- Library -->
    <string name="recently_played">Recently Played</string>
    <string name="most_played">Most Played</string>
    <string name="no_songs_found">No songs found</string>
    <string name="search_songs">Search songs</string>

    <!-- Playlists -->
    <string name="create_playlist">Create Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_description">Description (optional)</string>
    <string name="no_playlists">No playlists yet</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>

    <!-- Settings -->
    <string name="theme_settings">Theme Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="high_quality">High Quality</string>
    <string name="balanced">Balanced</string>
    <string name="data_saver">Data Saver</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="open_source_licenses">Open Source Licenses</string>

    <!-- Player -->
    <string name="album_art">Album Art</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="more_options">More Options</string>
</resources>
