<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.musicplayer.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_player"
            app:destination="@id/navigation_player"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.musicplayer.ui.library.LibraryFragment"
        android:label="@string/nav_library">
        <action
            android:id="@+id/action_library_to_player"
            app:destination="@id/navigation_player"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.musicplayer.ui.playlists.PlaylistsFragment"
        android:label="@string/nav_playlists">
        <action
            android:id="@+id/action_playlists_to_player"
            app:destination="@id/navigation_player"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
        <action
            android:id="@+id/action_playlists_to_playlist_details"
            app:destination="@id/navigation_playlist_details"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlist_details"
        android:name="com.musicplayer.ui.playlists.PlaylistDetailsFragment"
        android:label="Playlist">
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlist_details_to_player"
            app:destination="@id/navigation_player"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_down" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.musicplayer.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

    <fragment
        android:id="@+id/navigation_player"
        android:name="com.musicplayer.ui.player.PlayerFragment"
        android:label="Player">
        <argument
            android:name="songId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

</navigation>
